<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.meeting_form.FormMeetingActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/item_form_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/form_date"
            android:inputType="date"
            android:textAlignment="center"
            tools:ignore="Autofill,MissingConstraints" />

        <EditText
            android:id="@+id/item_form_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/form_time"
            android:inputType="date"
            android:textAlignment="center"
            tools:ignore="Autofill,MissingConstraints" />
    </LinearLayout>


    <EditText
        android:id="@+id/item_form_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:hint="@string/form_subject"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        tools:ignore="Autofill,MissingConstraints" />

    <Button
        android:id="@+id/btn_form_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSuccess"
        android:padding="10dp"
        android:text="@string/save_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>