<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.meeting_form.ParticipantFragment">

    <TextView
        android:id="@+id/textview_meeting_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_participant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autocomplete_participant"
        android:completionThreshold="1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_meeting_room"
        tools:ignore="LabelFor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list_participants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_participant"
        app:layout_constraintBottom_toTopOf="@+id/btn_form_save"
        tools:context=".ui.meeting_form.FormMeetingActivity"
        tools:listitem="@layout/list_participant" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_chevron_left_black"
        android:text="@string/btn_back"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_form_save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_save_green"
        android:drawablePadding="6dp"
        android:padding="10dp"
        android:text="@string/save_button"
        android:textColor="@color/colorSuccess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>